REFACTOR: Removendo Dozer, adicionando mapStruct